# crenderer

./: .gitignore  CMakeLists.txt  DefaultScene.hpp  Intersection.hpp  Material.hpp  MeshTriangle.hpp  README.md  Ray.hpp  Scene.hpp  Vector.hpp  main.cpp  sample.hpp  testVecMat.cpp
Polygon/: MeshTriangle.hpp  Triangle.hpp
acceleration/: BVH.hpp  Bounds3.hpp
core/: Mat.hpp  Vec.hpp  Vector.hpp  Vertex.hpp
example/: example.cpp  exampleStencil.cpp
example/alphaBlend/: exampleAlphaBlend.cpp
example/examples/SSAO/: ssao.cpp
example/examples/ShadowMap/: shadowMap.cpp
example/shaders/: fragmentShader.glsl  singleColorVertexShader.glsl  vertexShader.glsl
geometry/: Geometry.hpp  MeshTriangle.hpp  Triangle.hpp
glsl/: vertexShader.glsl
gpu/: test.cpp  testIntersec.cpp  testOpenCLMemory.cpp  testShade.cpp
gpu/openCL/: OpenCLKernel.hpp  OpenCLProgramContext.hpp  OpenCLRenderer.hpp
gpu/openCL/include/: C_BVH.h  C_Bounds3.h  C_Intersection.h  C_Object.h  C_Ray.h  C_Sphere.h  C_Triangle.h  OpenCLGlobal.h
gpu/openCL/kernel/: intersect.cl  random.cl  shade.cl  test.cl  trace.cl
gpu/openCL/translation/: bounds32cBounds3.hpp  bvh2cBvh.hpp  material2cMaterial.hpp  object2cObject.hpp  ray2cRay.hpp  sphere2cSphere.hpp  triangle2cTriangle.hpp  vec32float3.hpp
gpu/opencl/: OpenCLProgramContext.hpp
gpu/opencl/kernels/: TestStruct.hpp  helloStruct.cl.c  helloWorld.cl.c
loader/: MeshLoader.hpp  Texture2DLoader.hpp  TextureLoader.hpp
material/: CommonLightMaterial.hpp  CommonMaterial.hpp  Material.hpp  MaterialOpenGL.hpp  MaterialType.hpp  SpotLightMaterial.hpp
material/property/: DiffuseProperty.hpp  Property.hpp  SpecularProperty.hpp
object/: MeshTriangle.hpp  Object.hpp  ObjectTypes.hpp  Sphere.hpp  Triangle.hpp
object/mesh/: Mesh.hpp
object/primitive/: Primitive.hpp  PrimitivePolygon.hpp  PrimitiveSphere.hpp  Triangle.hpp
renderer/: OpenGLRenderer.hpp  Renderer.hpp
renderer/opengl/: OpenGLRenderer.hpp
scene/: Camera.hpp  Loader.hpp  Scene.hpp
shader/: GLSLShader.hpp  PathTraceShader.hpp  Shader.hpp  ShaderGLSL.hpp  VolumeLightShader.hpp
src/core/: Mat.hpp  Vec.hpp
src/material/: Material.hpp
src/object/: Mesh.hpp  Object.hpp  Primitive.hpp  Triangle.hpp
src/object/mesh/: Mesh.hpp
src/object/primitive/: Primitive.hpp
src/renderer/: OpenGLRenderer.hpp  Renderer.hpp
src/renderer/opengl/: OpenGLRenderer.hpp
src/scene/: Camera.hpp  Loader.hpp  Scene.hpp
src/shader/: GLSLShader.hpp
utils/: OBJLoader.hpp  util.hpp
(+21 files in other folders)
